--- a/platform/vcs-impl/src/com/intellij/openapi/diff/impl/dir/DirDiffPanel.form
+++ b/platform/vcs-impl/src/com/intellij/openapi/diff/impl/dir/DirDiffPanel.form
@@ -36,23 +36,6 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <scrollpane id="90582" class="com.intellij.ui.components.JBScrollPane">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties/>
-                    <border type="none"/>
-                    <children>
-                      <component id="1fb9d" class="com.intellij.ui.table.JBTable" binding="myTable">
-                        <constraints/>
-                        <properties>
-                          <intercellSpacing width="0" height="0"/>
-                          <showHorizontalLines value="false"/>
-                          <showVerticalLines value="false"/>
-                        </properties>
-                      </component>
-                    </children>
-                  </scrollpane>
                   <grid id="bc3dc" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
@@ -142,6 +125,30 @@
                           </grid>
                         </children>
                       </grid>
+                    </children>
+                  </grid>
+                  <grid id="33" binding="myFilesPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <scrollpane id="90582" class="com.intellij.ui.components.JBScrollPane">
+                        <constraints border-constraint="Center"/>
+                        <properties/>
+                        <border type="none"/>
+                        <children>
+                          <component id="1fb9d" class="com.intellij.ui.table.JBTable" binding="myTable">
+                            <constraints/>
+                            <properties>
+                              <intercellSpacing width="0" height="0"/>
+                              <showHorizontalLines value="false"/>
+                              <showVerticalLines value="false"/>
+                            </properties>
+                          </component>
+                        </children>
+                      </scrollpane>
                     </children>
                   </grid>
                 </children>
