--- a/xml/impl/src/com/intellij/application/options/CodeStyleHtmlPanel.form
+++ b/xml/impl/src/com/intellij/application/options/CodeStyleHtmlPanel.form
@@ -204,7 +204,7 @@
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <grid id="c0323" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                      <grid id="c0323" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                         <margin top="0" left="0" bottom="0" right="0"/>
                         <constraints>
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
@@ -245,6 +245,14 @@
                             </constraints>
                             <properties>
                               <text resource-bundle="messages/ApplicationBundle" key="checkbox.wrap.text"/>
+                            </properties>
+                          </component>
+                          <component id="ac15c" class="com.intellij.ui.components.JBCheckBox" binding="myKeepWhiteSpacesInTextCheckBox" default-binding="true">
+                            <constraints>
+                              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <text value="Keep white spaces in text"/>
                             </properties>
                           </component>
                         </children>
